fixed z-index on pricing page

--- a/docs/_sass/pricing.scss
+++ b/docs/_sass/pricing.scss
@@ -161,6 +161,7 @@ section.pricing {
 				padding-top: 1rem;
 				display: block !important;
 				height: auto;
+				z-index: auto;
 
 				& > span.price-sub {
 					display: block;
